--- a/public/index.html
+++ b/public/index.html
@@ -93,6 +93,26 @@
                 <div class="eighteen columns centered">
                     <div class="row">
                         <div class="ten columns">
+                            <a href="bio_ido-weinberg.html" class="reveal">
+                                <figure>
+                                    <div data-picture data-alt="" class="">
+                                        <div data-src="/images/photo_ido-weinberg.jpg"></div>
+                                        <div data-src="/images/photo_ido-weinberg@2x.jpg" data-media="(min--moz-device-pixel-ratio: 1.3), (-o-min-device-pixel-ratio: 13/10), (-webkit-min-device-pixel-ratio: 1.3), (min-device-pixel-ratio: 1.3), (min-resolution: 124.8dpi), (min-resolution: 1.3dppx)"></div>
+
+                                        <!--[if (lt IE 10) & (!IEMobile)]>
+                                        <div data-src="/images/photo_ido-weinberg.jpg"></div>
+                                        <![endif]-->
+
+                                        <!-- Fallback content for non-JS browsers. -->
+                                        <noscript>
+                                            <img src="/images/photo_ido-weinberg.jpg" alt="" />
+                                        </noscript>
+                                    </div>
+                                    <figcaption><p><span itemprop="name">Ido Weinberg, <span itemprop="honorificSuffix">MD</span>, <span itemprop="honorificSuffix">MSc</span>, <span itemprop="honorificSuffix">MHA</span>, <span itemprop="honorificSuffix">FSVM</span>, <span itemprop="honorificSuffix">RPVI</span></span><span itemprop="jobTitle">Director</span></p></figcaption>
+                                </figure>
+                            </a>
+                        </div>
+                        <div class="ten columns">
                             <a href="bio_michael-jaff.html" class="reveal">
                                 <figure>
                                     <div data-picture data-alt="" class="">
@@ -108,27 +128,7 @@
                                             <img src="/images/photo_michael-jaff.jpg" alt="" />
                                         </noscript>
                                     </div>
-                                    <figcaption><p><span itemprop="name">Michael R. Jaff, <span itemprop="honorificSuffix">D.O.</span></span><span itemprop="jobTitle">Founder and Director</span></p></figcaption>
-                                </figure>
-                            </a>
-                        </div>
-                        <div class="ten columns">
-                            <a href="bio_debra-jaff.html" class="reveal">
-                                <figure>
-                                    <div data-picture data-alt="" class="">
-                                        <div data-src="/images/photo_debra-jaff.jpg"></div>
-                                        <div data-src="/images/photo_debra-jaff@2x.jpg" data-media="(min--moz-device-pixel-ratio: 1.3), (-o-min-device-pixel-ratio: 13/10), (-webkit-min-device-pixel-ratio: 1.3), (min-device-pixel-ratio: 1.3), (min-resolution: 124.8dpi), (min-resolution: 1.3dppx)"></div>
-
-                                        <!--[if (lt IE 10) & (!IEMobile)]>
-                                        <div data-src="/images/photo_debra-jaff.jpg"></div>
-                                        <![endif]-->
-
-                                        <!-- Fallback content for non-JS browsers. -->
-                                        <noscript>
-                                            <img src="/images/photo_debra-jaff.jpg" alt="" />
-                                        </noscript>
-                                    </div>
-                                    <figcaption><p><span itemprop="name">Debra A. Jaff</span><span itemprop="jobTitle">Administrative Director</span></p></figcaption>
+                                    <figcaption><p><span itemprop="name">Michael R. Jaff, <span itemprop="honorificSuffix">D.O.</span></span><span itemprop="jobTitle">Founder</span></p></figcaption>
                                 </figure>
                             </a>
                         </div>
@@ -157,6 +157,29 @@
                             </a>
                         </div>
                         <div class="ten columns">
+                            <a href="bio_erin-lacey.html" class="reveal">
+                                <figure>
+                                    <div data-picture data-alt="" class="">
+                                        <div data-src="/images/photo_erin-lacey.jpg"></div>
+                                        <div data-src="/images/photo_erin-lacey@2x.jpg" data-media="(min--moz-device-pixel-ratio: 1.3), (-o-min-device-pixel-ratio: 13/10), (-webkit-min-device-pixel-ratio: 1.3), (min-device-pixel-ratio: 1.3), (min-resolution: 124.8dpi), (min-resolution: 1.3dppx)"></div>
+
+                                        <!--[if (lt IE 10) & (!IEMobile)]>
+                                        <div data-src="/images/photo_erin-lacey.jpg"></div>
+                                        <![endif]-->
+
+                                        <!-- Fallback content for non-JS browsers. -->
+                                        <noscript>
+                                            <img src="/images/photo_erin-lacey.jpg" alt="" />
+                                        </noscript>
+                                    </div>
+                                    <figcaption><p><span itemprop="name">Erin Lacey, <span itemprop="honorificSuffix">MS</span></span><span itemprop="jobTitle">Administrative Manager</span></p></figcaption>
+                                </figure>
+                            </a>
+                        </div>
+
+                    </div>
+                    <div class="row">
+                        <div class="ten columns">
                             <a href="bio_sandra-croteau.html" class="reveal">
                                 <figure>
                                     <div data-picture data-alt="" class="">
@@ -176,9 +199,6 @@
                                 </figure>
                             </a>
                         </div>
-                    </div>
-                    <div class="row">
-
                         <div class="ten columns">
                             <a href="bio_victoria-sova.html" class="reveal">
                                 <figure>
@@ -200,49 +220,30 @@
                             </a>
                         </div>
 
-                        <div class="ten columns">
-                            <a href="bio_ido-weinberg.html" class="reveal">
-                                <figure>
-                                    <div data-picture data-alt="" class="">
-                                        <div data-src="/images/photo_ido-weinberg.jpg"></div>
-                                        <div data-src="/images/photo_ido-weinberg@2x.jpg" data-media="(min--moz-device-pixel-ratio: 1.3), (-o-min-device-pixel-ratio: 13/10), (-webkit-min-device-pixel-ratio: 1.3), (min-device-pixel-ratio: 1.3), (min-resolution: 124.8dpi), (min-resolution: 1.3dppx)"></div>
 
-                                        <!--[if (lt IE 10) & (!IEMobile)]>
-                                        <div data-src="/images/photo_ido-weinberg.jpg"></div>
-                                        <![endif]-->
-
-                                        <!-- Fallback content for non-JS browsers. -->
-                                        <noscript>
-                                            <img src="/images/photo_ido-weinberg.jpg" alt="" />
-                                        </noscript>
-                                    </div>
-                                    <figcaption><p><span itemprop="name">Ido Weinberg, <span itemprop="honorificSuffix">MD</span>, <span itemprop="honorificSuffix">MSc</span>, <span itemprop="honorificSuffix">MHA</span>, <span itemprop="honorificSuffix">FSVM</span>, <span itemprop="honorificSuffix">RPVI</span></span><span itemprop="jobTitle">Physician Reviewer</span></p></figcaption>
-                                </figure>
-                            </a>
-                        </div>
                     </div>
                     <div class="row">
+
                         <div class="ten columns">
-                            <a href="bio_erin-lacey.html" class="reveal">
+                            <a href="bio_kathryn-lane.html" class="reveal">
                                 <figure>
                                     <div data-picture data-alt="" class="">
-                                        <div data-src="/images/photo_erin-lacey.jpg"></div>
-                                        <div data-src="/images/photo_erin-lacey@2x.jpg" data-media="(min--moz-device-pixel-ratio: 1.3), (-o-min-device-pixel-ratio: 13/10), (-webkit-min-device-pixel-ratio: 1.3), (min-device-pixel-ratio: 1.3), (min-resolution: 124.8dpi), (min-resolution: 1.3dppx)"></div>
+                                        <div data-src="/images/photo_kathryn-lane.jpg"></div>
+                                        <div data-src="/images/photo_kathryn-lane@2x.jpg" data-media="(min--moz-device-pixel-ratio: 1.3), (-o-min-device-pixel-ratio: 13/10), (-webkit-min-device-pixel-ratio: 1.3), (min-device-pixel-ratio: 1.3), (min-resolution: 124.8dpi), (min-resolution: 1.3dppx)"></div>
 
                                         <!--[if (lt IE 10) & (!IEMobile)]>
-                                        <div data-src="/images/photo_erin-lacey.jpg"></div>
+                                        <div data-src="/images/photo_kathryn-lane.jpg"></div>
                                         <![endif]-->
 
                                         <!-- Fallback content for non-JS browsers. -->
                                         <noscript>
-                                            <img src="/images/photo_erin-lacey.jpg" alt="" />
+                                            <img src="/images/photo_kathryn-lane.jpg" alt="" />
                                         </noscript>
                                     </div>
-                                    <figcaption><p><span itemprop="name">Erin Lacey, <span itemprop="honorificSuffix">MS</span></span><span itemprop="jobTitle">Administrative Manager</span></p></figcaption>
+                                    <figcaption><p><span itemprop="name">Kathryn Lane, <span itemprop="honorificSuffix">LPN</span>, <span itemprop="honorificSuffix">RVT</span></span><span itemprop="jobTitle">TBD</span></p></figcaption>
                                 </figure>
                             </a>
                         </div>
-
                         <div class="ten columns">
                             <a href="bio_justin-mcneil.html" class="reveal">
                                 <figure>
@@ -266,27 +267,27 @@
                     </div>
 
                     <div class="row">
+
                         <div class="ten columns">
-                            <a href="bio_meghna-lahiry.html" class="reveal">
+                            <a href="bio_sabina-dhami.html" class="reveal">
                                 <figure>
                                     <div data-picture data-alt="" class="">
-                                        <div data-src="/images/photo_meghna-lahiry.jpg"></div>
-                                        <div data-src="/images/photo_meghna-lahiry@2x.jpg" data-media="(min--moz-device-pixel-ratio: 1.3), (-o-min-device-pixel-ratio: 13/10), (-webkit-min-device-pixel-ratio: 1.3), (min-device-pixel-ratio: 1.3), (min-resolution: 124.8dpi), (min-resolution: 1.3dppx)"></div>
+                                        <div data-src="/images/photo_sabina-dhami.jpg"></div>
+                                        <div data-src="/images/photo_sabina-dhami@2x.jpg" data-media="(min--moz-device-pixel-ratio: 1.3), (-o-min-device-pixel-ratio: 13/10), (-webkit-min-device-pixel-ratio: 1.3), (min-device-pixel-ratio: 1.3), (min-resolution: 124.8dpi), (min-resolution: 1.3dppx)"></div>
 
                                         <!--[if (lt IE 10) & (!IEMobile)]>
-                                        <div data-src="/images/photo_meghna-lahiry.jpg"></div>
+                                        <div data-src="/images/photo_sabina-dhami.jpg"></div>
                                         <![endif]-->
 
                                         <!-- Fallback content for non-JS browsers. -->
                                         <noscript>
-                                            <img src="/images/photo_meghna-lahiry.jpg" alt="" />
+                                            <img src="/images/photo_sabina-dhami.jpg" alt="" />
                                         </noscript>
                                     </div>
-                                    <figcaption><p><span itemprop="name">Meghna Lahiry</span><span itemprop="jobTitle">Administrative Coordinator</span></p></figcaption>
+                                    <figcaption><p><span itemprop="name">Sabina Dhami</span><span itemprop="jobTitle">Project Team Lead</span></p></figcaption>
                                 </figure>
                             </a>
                         </div>
-
                         <div class="ten columns">
                             <a href="bio_ritu-shrestha.html" class="reveal">
                                 <figure>
@@ -311,26 +312,7 @@
                     </div>
 
                     <div class="row">
-                        <div class="ten columns">
-                            <a href="bio_sabina-dhami.html" class="reveal">
-                                <figure>
-                                    <div data-picture data-alt="" class="">
-                                        <div data-src="/images/photo_sabina-dhami.jpg"></div>
-                                        <div data-src="/images/photo_sabina-dhami@2x.jpg" data-media="(min--moz-device-pixel-ratio: 1.3), (-o-min-device-pixel-ratio: 13/10), (-webkit-min-device-pixel-ratio: 1.3), (min-device-pixel-ratio: 1.3), (min-resolution: 124.8dpi), (min-resolution: 1.3dppx)"></div>
 
-                                        <!--[if (lt IE 10) & (!IEMobile)]>
-                                        <div data-src="/images/photo_sabina-dhami.jpg"></div>
-                                        <![endif]-->
-
-                                        <!-- Fallback content for non-JS browsers. -->
-                                        <noscript>
-                                            <img src="/images/photo_sabina-dhami.jpg" alt="" />
-                                        </noscript>
-                                    </div>
-                                    <figcaption><p><span itemprop="name">Sabina Dhami</span><span itemprop="jobTitle">Staff Assistant</span></p></figcaption>
-                                </figure>
-                            </a>
-                        </div>
                         <div class="ten columns">
                             <a href="bio_justin-thompson.html" class="reveal">
                                 <figure>
@@ -351,8 +333,6 @@
                                 </figure>
                             </a>
                         </div>
-                    </div>
-                    <div class="row">
                         <div class="ten columns">
                             <a href="bio_luis-cintron.html" class="reveal">
                                 <figure>
@@ -373,6 +353,9 @@
                                 </figure>
                             </a>
                         </div>
+                    </div>
+                    <div class="row">
+
                         <div class="ten columns">
                             <a href="bio_brian-chung.html" class="reveal">
                                 <figure>
